--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "express": "^4.16.2",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
+    "material-ui": "^1.0.0-beta.18",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.0",
     "redux-actions": "^2.0.3",
     "redux-thunk": "^2.2.0",
@@ -24,6 +27,7 @@
     "styled-components": "^2.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -34,12 +38,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-zavatta": "^6.0.1",
     "eslint-config-zavatta-react": "^2.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
     "react-hot-loader": "^3.1.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
